fix some issue on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,10 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 2px;
 }
 
+#header {
+  text-align: left;
+}
+
 #header .logo {
   font-family: 'Ubuntu';
   font-size: 2.5rem;
